--- a/app/src/main/res/layout/dialog_agent_customer_withdraw.xml
+++ b/app/src/main/res/layout/dialog_agent_customer_withdraw.xml
@@ -30,9 +30,9 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_weight=".9"
-            android:layout_gravity="end"
+            android:layout_gravity="end|center"
             android:layout_margin="5dp"
-            android:src="@drawable/close" />
+            android:src="@drawable/ic_close_white" />
 
     </LinearLayout>
 
@@ -46,7 +46,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="50dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
             android:orientation="vertical"
             android:paddingTop="@dimen/margin_10">
 
@@ -54,7 +55,6 @@
                 android:id="@+id/text_view_error_message"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/josefin_sans"
                 android:gravity="center"
                 android:text="Insufficient Funds!"
                 android:textColor="@color/device_problem"
@@ -80,7 +80,7 @@
                     android:layout_height="45dp"
                     android:layout_weight="1"
                     android:layout_alignParentTop="true"
-                    android:background="@drawable/edittext_corner"
+                    android:background="@drawable/rectangular_blue_solid"
                     android:orientation="horizontal">
 
                     <Spinner
@@ -103,7 +103,7 @@
                         android:layout_marginRight="10dp"
                         android:layout_centerVertical="true"
                         android:layout_gravity="center"
-                        android:src="@drawable/ic_chevron_down" />
+                        android:src="@drawable/ic_down_chevron" />
 
                 </RelativeLayout>
 
@@ -121,7 +121,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:fontFamily="@font/josefin_sans"
                     android:text="Customer Number"
                     android:textSize="@dimen/margin_16" />
 
@@ -135,7 +134,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="45dp"
                         android:layout_alignParentTop="true"
-                        android:background="@drawable/edittext_corner"
+                        android:background="@drawable/outline_primary"
                         android:orientation="horizontal">
                         <TextView
                             android:layout_width="0dp"
@@ -154,7 +153,6 @@
                             android:layout_height="match_parent"
                             android:layout_weight="0.5"
                             android:background="@android:color/transparent"
-                            android:fontFamily="@font/josefin_sans"
                             android:gravity="center_vertical"
                             android:inputType="phone"
                             android:maxLength="9"
@@ -182,15 +180,14 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Account Number"
-                    android:textSize="16sp"
-                    android:fontFamily="@font/josefin_sans" />
+                    android:textSize="16sp" />
 
                 <EditText
                     android:id="@+id/etxt_customer_withdraw_account"
                     android:layout_width="match_parent"
                     android:layout_height="45dp"
                     android:paddingStart="@dimen/dimen_10dp"
-                    android:background="@drawable/edittext_corner"
+                    android:background="@drawable/outline_primary"
                     android:inputType="number"
                     android:textColor="@android:color/black"
                     android:layout_marginTop="8dp" />
@@ -208,7 +205,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:fontFamily="@font/josefin_sans"
                     android:text="Phone Number"
                     android:textSize="@dimen/margin_16" />
 
@@ -222,7 +218,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="45dp"
                         android:layout_alignParentTop="true"
-                        android:background="@drawable/edittext_corner"
+                        android:background="@drawable/outline_primary"
                         android:orientation="horizontal">
                         <TextView
                             android:id="@+id/txt_crops_estimated_revenue_units"
@@ -242,7 +238,6 @@
                             android:layout_height="match_parent"
                             android:layout_weight="0.5"
                             android:background="@android:color/transparent"
-                            android:fontFamily="@font/josefin_sans"
                             android:gravity="center_vertical"
                             android:inputType="phone"
                             android:maxLength="9"
@@ -268,7 +263,6 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/josefin_sans"
                     android:text="Amount"
                     android:textSize="@dimen/margin_16" />
 
@@ -276,7 +270,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="45dp"
                     android:layout_marginTop="8dp"
-                    android:background="@drawable/edittext_corner"
+                    android:background="@drawable/outline_primary"
                     android:orientation="horizontal">
                     <TextView
 
@@ -355,41 +349,30 @@
             </FrameLayout>
 
             <FrameLayout
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/margin_10"
                 android:layout_marginTop="@dimen/margin_10"
-                android:layout_marginRight="@dimen/margin_10"
                 android:layout_marginBottom="5dp"
+                android:paddingStart="20dp"
+                android:paddingEnd="20dp"
                 android:id="@+id/layout_withdraw_submit"
-                android:background="@drawable/rounded_corners_button"
-                android:gravity="right">
+                android:background="@drawable/rectangular_blue_solid"
+                android:layout_gravity="center">
 
                 <Button
                     android:id="@+id/txt_withdraw_submit"
                     style="@style/Button_DW"
                     android:layout_width="match_parent"
-                    android:layout_height="40dip"
+                    android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:layout_weight="1"
                     android:background="@color/transparent"
-                    android:backgroundTint="@color/textColor"
                     android:text="@string/submit"
                     android:textStyle="bold"
                     android:textAllCaps="true"
                     android:textColor="@color/white"
-                    android:textSize="@dimen/button_text_size" />
+                    android:textSize="16sp" />
 
-                <ImageView
-                    android:layout_width="30dip"
-                    android:layout_height="30dip"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:layout_gravity="right|center_vertical"
-                    android:layout_margin="10dip"
-                    android:src="@drawable/ic_right_chevron">
-
-                </ImageView>
 
             </FrameLayout>
 
