--- a/app/src/main/res/layout/fragment_identity_proof.xml
+++ b/app/src/main/res/layout/fragment_identity_proof.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/windowBackground"
+    android:background="@color/white"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragments.wallet_fragments.IdentityProofFragment">
     <com.google.android.material.appbar.AppBarLayout
@@ -20,6 +20,7 @@
             android:id="@+id/toolbar_account_opening"
             android:layout_width="match_parent"
             android:layout_height="?actionBarSize"
+            app:navigationIcon="@drawable/ic_chevron_left_white"
             app:popupTheme="@style/AppTheme.PopupOverlay"/>
 
     </com.google.android.material.appbar.AppBarLayout>
@@ -27,13 +28,13 @@
         android:id="@+id/heading"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/josefin_sans"
         android:paddingLeft="10dp"
         android:paddingTop="5dp"
         android:paddingBottom="10sp"
+        android:layout_marginTop="15dp"
         android:text="Identity Proof Details"
         android:textColor="@color/colorPrimary"
-        android:textSize="20sp"
+        android:textSize="18sp"
         android:textStyle="bold"
         android:layout_below="@id/appbar_account_opening"/>
 
@@ -54,7 +55,7 @@
         app:spb_maxStateNumber="four"
         app:spb_animationDuration="500"
         app:spb_maxDescriptionLines="2"
-        app:spb_stateDescriptionSize="18sp"
+        app:spb_stateDescriptionSize="16sp"
         app:spb_stateBackgroundColor="#BDBDBD"
         app:spb_stateDescriptionColor="#808080"
         app:spb_stateForegroundColor="@color/colorPrimary"
@@ -91,7 +92,6 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:fontFamily="@font/josefin_sans"
                         android:text="National ID NIN"
                         android:layout_marginBottom="4dp"
                         android:textSize="16sp" />
@@ -101,8 +101,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="45dp"
                         android:padding="10dp"
-                        android:background="@drawable/edittext_corner"
-                        android:fontFamily="@font/josefin_sans"
+                        android:background="@drawable/outline_primary"
                         android:inputType="text"
                         android:textColor="#000"/>
 
@@ -118,7 +117,6 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:fontFamily="@font/josefin_sans"
                         android:text="Valid Up to"
                         android:layout_marginBottom="4dp"
                         android:textSize="16sp" />
@@ -128,7 +126,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="45dp"
                         android:padding="10dp"
-                        android:background="@drawable/edittext_corner"
+                        android:background="@drawable/outline_primary"
                         android:drawableEnd="@drawable/ic_baseline_date_range_24"
                         android:textColor="#000"
                         android:textSize="14sp"
@@ -155,7 +153,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="45dp"
-                    android:background="@drawable/edittext_corner"
+                    android:background="@drawable/outline_primary"
                     android:orientation="horizontal"
                     android:weightSum="10">
 
@@ -165,7 +163,6 @@
                         android:layout_height="match_parent"
                         android:layout_weight="7"
                         android:background="@android:color/transparent"
-                        android:fontFamily="@font/josefin_sans"
                         android:inputType="text"
                         android:padding="10dp"
                         android:textColor="#000"/>
@@ -176,11 +173,10 @@
                         android:layout_height="match_parent"
                         android:layout_weight="3"
                         android:background="@drawable/edittext_right_corners_green"
-                        android:fontFamily="@font/josefin_sans"
                         android:gravity="center"
                         android:text="Browse"
                         android:textColor="#ffffff"
-                        android:textSize="20sp"
+                        android:textSize="16sp"
                         android:textStyle="bold" />
 
                 </LinearLayout>
@@ -200,7 +196,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="45dp"
-                    android:background="@drawable/edittext_corner"
+                    android:background="@drawable/outline_primary"
                     android:orientation="horizontal"
                     android:weightSum="10">
 
@@ -210,7 +206,7 @@
                         android:layout_height="match_parent"
                         android:layout_weight="7"
                         android:background="@android:color/transparent"
-                        android:fontFamily="@font/josefin_sans"
+
                         android:inputType="text"
                         android:padding="10dp"
                         android:textColor="#000" />
@@ -221,11 +217,10 @@
                         android:layout_height="match_parent"
                         android:layout_weight="3"
                         android:background="@drawable/edittext_right_corners_green"
-                        android:fontFamily="@font/josefin_sans"
                         android:gravity="center"
                         android:text="Browse"
                         android:textColor="#ffffff"
-                        android:textSize="20sp"
+                        android:textSize="16sp"
                         android:textStyle="bold" />
 
                 </LinearLayout>
@@ -245,7 +240,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="45dp"
-                    android:background="@drawable/edittext_corner"
+                    android:background="@drawable/outline_primary"
                     android:orientation="horizontal"
                     android:weightSum="10">
 
@@ -255,7 +250,6 @@
                         android:layout_height="match_parent"
                         android:layout_weight="7"
                         android:background="@android:color/transparent"
-                        android:fontFamily="@font/josefin_sans"
                         android:inputType="text"
                         android:padding="10dp"
                         android:textColor="#000"/>
@@ -266,12 +260,11 @@
                         android:layout_height="match_parent"
                         android:layout_weight="3"
                         android:background="@drawable/edittext_right_corners_green"
-                        android:fontFamily="@font/josefin_sans"
                         android:gravity="center"
                         android:padding="10dp"
                         android:text="Browse"
                         android:textColor="#ffffff"
-                        android:textSize="20sp"
+                        android:textSize="16sp"
                         android:textStyle="bold" />
 
                 </LinearLayout>
@@ -287,27 +280,21 @@
                     android:layout_height="45dp"
                     android:layout_weight="1"
                     android:layout_marginEnd="@dimen/dimen_5dp"
-                    android:background="@drawable/round_corners_button_darkgray"
+                    android:background="@drawable/rectangular_blue_solid"
                     android:layout_marginRight="@dimen/dimen_5dp">
-                    <ImageView
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
-                        android:layout_gravity="start|center_vertical"
-                        android:layout_margin="10dp"
-                        android:src="@drawable/ic_left_chevron"/>
+
                     <Button
                         android:id="@+id/previous_button_two"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_gravity="center_vertical"
                         android:layout_weight="1"
-                        android:paddingStart="6dp"
                         android:background="@color/transparent"
                         android:text="@string/previous"
                         android:textColor="@color/white"
-                        android:textSize="@dimen/button_text_size"
+                        android:textSize="16sp"
                         android:textStyle="bold"
-                        android:paddingLeft="6dp" />
+                        android:drawableLeft="@drawable/ic_chevron_left_white"/>
 
 
 
@@ -317,7 +304,7 @@
                     android:layout_height="45dp"
                     android:layout_weight="1"
                     android:layout_marginStart="@dimen/dimen_5dp"
-                    android:background="@drawable/rounded_corners_button"
+                    android:background="@drawable/rectangular_blue_solid"
                     android:layout_marginLeft="@dimen/dimen_5dp">
 
                     <Button
@@ -327,23 +314,13 @@
                         android:layout_gravity="center_vertical"
                         android:layout_weight="1"
                         android:background="@color/transparent"
-                        android:paddingStart="30dp"
-                        android:paddingEnd="4dp"
                         android:text="@string/next"
                         android:textColor="@color/white"
-                        android:textSize="@dimen/button_text_size"
+                        android:textSize="16sp"
                         android:textStyle="bold"
-                        android:paddingLeft="30dp"
-                        android:paddingRight="4dp" />
+                        android:drawableRight="@drawable/ic_right_chevron_arrow_white"/>
 
-                    <ImageView
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
-                        android:layout_gravity="end|center_vertical"
-                        android:layout_margin="10dp"
-                        android:src="@drawable/ic_right_chevron">
 
-                    </ImageView>
                 </FrameLayout>
             </LinearLayout>
 
