--- a/app/src/main/res/layout/activity_card_detail.xml
+++ b/app/src/main/res/layout/activity_card_detail.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/windowBackground"
+    android:background="@color/white"
     tools:context=".fragments.wallet_fragments.CardDetail">
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbar_account_opening"
@@ -21,6 +21,7 @@
             android:id="@+id/toolbar_account_opening"
             android:layout_width="match_parent"
             android:layout_height="?actionBarSize"
+            app:navigationIcon="@drawable/ic_chevron_left_white"
             app:popupTheme="@style/AppTheme.PopupOverlay"/>
 
     </com.google.android.material.appbar.AppBarLayout>
@@ -31,9 +32,10 @@
         android:paddingLeft="10dp"
         android:paddingTop="5dp"
         android:paddingBottom="10sp"
+        android:layout_marginTop="15dp"
         android:text="Enter Card Details"
         android:textColor="@color/colorPrimary"
-        android:textSize="20sp"
+        android:textSize="18sp"
         android:textStyle="bold"
         android:layout_below="@id/appbar_account_opening"/>
 
@@ -54,7 +56,7 @@
         app:spb_maxStateNumber="four"
         app:spb_animationDuration="500"
         app:spb_maxDescriptionLines="2"
-        app:spb_stateDescriptionSize="18sp"
+        app:spb_stateDescriptionSize="16sp"
         app:spb_stateBackgroundColor="#BDBDBD"
         app:spb_stateDescriptionColor="#808080"
         app:spb_stateForegroundColor="@color/colorPrimary"
@@ -84,7 +86,7 @@
                 android:id="@+id/etxt_card_account_number"
                 android:layout_width="match_parent"
                 android:layout_height="45dp"
-                android:background="@drawable/edittext_corner"
+                android:background="@drawable/outline_primary"
                 android:inputType="number"
                 android:padding="10dp"
                 android:textColor="#000"/>
@@ -101,7 +103,7 @@
                 android:id="@+id/etxt_card_number"
                 android:layout_width="match_parent"
                 android:layout_height="45dp"
-                android:background="@drawable/edittext_corner"
+                android:background="@drawable/outline_primary"
                 android:inputType="number"
                 android:maxLength="19"
                 android:padding="10dp"
@@ -133,7 +135,7 @@
                         android:layout_height="45dp"
                         android:layout_marginTop="5dp"
                         android:layout_marginRight="5dp"
-                        android:background="@drawable/edittext_corner"
+                        android:background="@drawable/outline_primary"
                         android:inputType="date"
                         android:padding="10dp"
                         android:textColor="#000"
@@ -162,7 +164,7 @@
                         android:layout_height="45dp"
                         android:layout_marginLeft="5dp"
                         android:layout_marginTop="5dp"
-                        android:background="@drawable/edittext_corner"
+                        android:background="@drawable/outline_primary"
                         android:inputType="number"
                         android:maxLength="3"
                         android:padding="10dp"
@@ -185,7 +187,7 @@
                 android:id="@+id/etxt_card_enter_pin"
                 android:layout_width="match_parent"
                 android:layout_height="45dp"
-                android:background="@drawable/edittext_corner"
+                android:background="@drawable/outline_primary"
                 android:inputType="numberPassword"
                 android:maxLength="4"
                 android:padding="10dp"
@@ -203,7 +205,7 @@
                 android:id="@+id/etxt_card_confirm_pin"
                 android:layout_width="match_parent"
                 android:layout_height="45dp"
-                android:background="@drawable/edittext_corner"
+                android:background="@drawable/outline_primary"
                 android:inputType="numberPassword"
                 android:maxLength="4"
                 android:padding="10dp"
@@ -220,27 +222,21 @@
                     android:layout_height="45dp"
                     android:layout_weight="1"
                     android:layout_marginEnd="@dimen/dimen_5dp"
-                    android:background="@drawable/round_corners_button_darkgray"
+                    android:background="@drawable/rectangular_blue_solid"
                     android:layout_marginRight="@dimen/dimen_5dp">
-                    <ImageView
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
-                        android:layout_gravity="start|center_vertical"
-                        android:layout_margin="10dp"
-                        android:src="@drawable/ic_left_chevron"/>
+
                     <Button
                         android:id="@+id/previous_button"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_gravity="center_vertical"
                         android:layout_weight="1"
-                        android:paddingStart="6dp"
                         android:background="@color/transparent"
                         android:text="@string/previous"
                         android:textColor="@color/white"
-                        android:textSize="@dimen/button_text_size"
+                        android:textSize="16sp"
                         android:textStyle="bold"
-                        android:paddingLeft="6dp" />
+                        android:drawableLeft="@drawable/ic_chevron_left_white"/>
 
 
 
@@ -250,7 +246,7 @@
                     android:layout_height="45dp"
                     android:layout_weight="1"
                     android:layout_marginStart="@dimen/dimen_5dp"
-                    android:background="@drawable/rounded_corners_button"
+                    android:background="@drawable/rectangular_blue_solid"
                     android:layout_marginLeft="@dimen/dimen_5dp">
 
                     <Button
@@ -260,23 +256,13 @@
                         android:layout_gravity="center_vertical"
                         android:layout_weight="1"
                         android:background="@color/transparent"
-                        android:paddingStart="30dp"
-                        android:paddingEnd="4dp"
                         android:text="@string/submit"
                         android:textColor="@color/white"
-                        android:textSize="@dimen/button_text_size"
+                        android:textSize="16sp"
                         android:textStyle="bold"
-                        android:paddingLeft="30dp"
-                        android:paddingRight="4dp" />
+                        android:drawableEnd="@drawable/ic_right_chevron_arrow_white"/>
 
-                    <ImageView
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
-                        android:layout_gravity="end|center_vertical"
-                        android:layout_margin="10dp"
-                        android:src="@drawable/ic_right_chevron">
 
-                    </ImageView>
                 </FrameLayout>
             </LinearLayout>
 
