--- a/app/src/main/res/layout/dialog_agent_customer_deposit.xml
+++ b/app/src/main/res/layout/dialog_agent_customer_deposit.xml
@@ -44,7 +44,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="50dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
             android:orientation="vertical"
             android:paddingTop="@dimen/margin_10">
 
