--- a/app/src/main/res/layout/dialog_balance_inquiry_response.xml
+++ b/app/src/main/res/layout/dialog_balance_inquiry_response.xml
@@ -40,18 +40,18 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="UHURU SSERUBIRI'S"
-            android:textColor="@color/black"
+            android:text="Customer Name's"
+            android:textColor="@color/colorPrimaryDark"
             android:textSize="20sp"
-            android:textStyle="bold"
-            android:layout_marginBottom="10dp"/>
+            android:textStyle="bold"/>
         <TextView
             android:id="@+id/balance_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Available Balance is : \n"
-            android:textColor="@color/black"
+            android:layout_marginBottom="15dp"
+            android:text="available Balance is : "
+            android:textColor="@color/colorPrimaryDark"
             android:textSize="20sp"
             android:textStyle="bold" />
 
@@ -61,8 +61,9 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="UGX 0.0"
-            android:textSize="20sp"
-            android:textStyle="bold" />
+            android:textSize="22sp"
+            android:textStyle="bold"
+            />
 
     </LinearLayout>
 
@@ -73,18 +74,19 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="10dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="15dp"
         android:layout_marginBottom="10dp">
 
         <Button
             android:id="@+id/dialog_button"
             android:layout_width="wrap_content"
-            android:layout_height="35dp"
+            android:layout_height="40dp"
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp"
             android:text="@string/ok"
             android:textAllCaps="false"
             android:textSize="15sp"
             android:textColor="@color/white"
-            android:textAlignment="center"
             android:layout_gravity="center"
             android:textStyle="bold"
             android:background="@drawable/rectangular_blue_solid" />
